[package]
name = "pretty-make"
version = "0.1.0"
authors = ["Awea <aweaoftheworld@gmail.com>"]
license = "GPL-3.0-or-later"
description = "Make Make pretty"
homepage = "https://github.com/awea/pretty-make"
repository = "https://github.com/awea/pretty-make"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
pest = "2.1.3"
pest_derive = "2.1.0"
colored = "2"
colors-transform = "0.2.11"
