[package]
name = "pretty-make"
version = "0.5.0"
authors = ["Awea <aweaoftheworld@gmail.com>"]
license = "GPL-3.0-or-later"
description = "Make Make pretty"
homepage = "https://github.com/awea/pretty-make"
repository = "https://github.com/awea/pretty-make"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"

# For now I'm using a fork of https://github.com/rafael-patronilo/pest to handle
# almost all emojis - @awea 20201215
# See related pull request: https://github.com/pest-parser/pest/pull/468
pest = { version = "2.1.3", git = "https://github.com/Awea/pest" }
pest_derive = "2.1.0"
colored = "2"
colors-transform = "0.2.11"
