[package]
name = "pretty-make"
version = "0.5.4"
authors = ["Awea <aweaoftheworld@gmail.com>"]
license = "GPL-3.0-or-later"
description = "Make Make pretty"
homepage = "https://github.com/awea/pretty-make"
repository = "https://github.com/awea/pretty-make"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
reqwest = { version = "0.11", features = ["blocking"]}
# tempfile = "3"

# For now I'm using master to supports emojis since there is no new version released - @awea 20200430
# See related pull request: https://github.com/pest-parser/pest/pull/468
pest = { version = "2.1.3", git = "https://github.com/pest-parser/pest" }
pest_derive = "2.1.0"
colored = "2"
colors-transform = "0.2.11"
